# snake_game

./: .gitignore  CMakeLists.txt  README.md
src/: audio.cpp  audio.h  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  snake.h
